# aoc-2022

./: README.md  aoc2022.cabal
app/: AocUtil.hs  Day1.hs  Day2.hs  Day3.hs  Day6.hs  Main.hs
